--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,72 @@
 * {
+    padding: 0;
+    margin: 0;
     font-family: 'Franklin Gothic';
+
+    --logo-size: 50px;
+}
+
+body {
+    background-color: black;
+}
+
+/****************************** HEADER *******************************/
+
+header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-color: rgba(187, 177, 40, 0.473);
+}
+
+logo {
+    position: absolute;
+    width: var(--logo-size);
+    height: var(--logo-size);
+    border: 1px solid white;
+}
+
+/****************************** NAVIGATION *******************************/
+
+nav {
+    width: 50%;
+    float: right;
+}
+
+nav > ul {
+    list-style-type: none;
+}
+
+nav > ul > li {
+    float: right;
+    width: 25%;
+}
+
+nav > ul > li > a {
+    color: white;
+    
+    display: block;
+    height: var(--logo-size);
+    line-height: var(--logo-size);
+
+    font-style: none;
+    text-decoration: none;
+    text-align: center;
+}
+
+nav > ul > li > a:hover {
+    background-color: orange;
+}
+
+/****************************** MAIN *******************************/
+main {
+    margin-top: var(--logo-size);;
 }
 
 /****************************** FOOTER *******************************/
 
 footer {
-    background:black;
+    background:gray;
     color: white;
     text-align: center;
     padding: 1em;
