--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,16 @@ body {
     background-color: black;
 }
 
+h1 {
+    text-align: center;
+    margin-bottom: 0.5em;
+    font-size: 3em;
+}
+
 /****************************** HEADER *******************************/
 
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     background-color: rgba(187, 177, 40, 0.473);
@@ -59,8 +65,35 @@ nav > ul > li > a:hover {
 }
 
 /****************************** MAIN *******************************/
+
 main {
-    margin-top: var(--logo-size);;
+    width: 80vw;
+    margin: var(--logo-size) auto;
+    color: white;
+}
+
+.section {
+    padding-top: 5em;
+}
+
+.article {
+    width: 50vw;
+
+    margin: auto;
+}
+
+.article img{
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+
+.article p {
+    margin: 0.5em;
+
+    font-size: 1.5em;
+    line-height: 1.5em;
+    text-indent: 2em;
 }
 
 /****************************** FOOTER *******************************/
