Changed to 'Coming Soon'

--- a/css/main.css
+++ b/css/main.css
@@ -1,126 +1,5 @@
-* {
-    padding: 0;
-    margin: 0;
-    font-family: 'Franklin Gothic';
-
-    --logo-size: 50px;
-}
-
-body {
-    background-color: black;
-}
-
 h1 {
     text-align: center;
-    margin-bottom: 0.5em;
-    font-size: 3em;
-}
-
-/****************************** HEADER *******************************/
-
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(187, 177, 40, 0.473);
-}
-
-logo {
-    position: absolute;
-    width: var(--logo-size);
-    height: var(--logo-size);
-    border: 1px solid white;
-}
-
-/****************************** NAVIGATION *******************************/
-
-nav {
-    width: 50%;
-    float: right;
-}
-
-nav > ul {
-    list-style-type: none;
-}
-
-nav > ul > li {
-    float: right;
-    width: 25%;
-}
-
-nav > ul > li > a {
-    color: white;
-    
-    display: block;
-    height: var(--logo-size);
-    line-height: var(--logo-size);
-
-    font-style: none;
-    text-decoration: none;
-    text-align: center;
-}
-
-nav > ul > li > a:hover {
-    background-color: orange;
-}
-
-/****************************** MAIN *******************************/
-
-main {
-    width: 80vw;
-    margin: var(--logo-size) auto;
-    color: white;
-}
-
-.section {
-    padding-top: 5em;
-}
-
-.article {
-    width: 50vw;
-
-    margin: auto;
-}
-
-.article img{
-    width: 50%;
-    display: block;
-    margin: auto;
-}
-
-.article p {
-    margin: 0.5em;
-
-    font-size: 1.5em;
-    line-height: 1.5em;
-    text-indent: 2em;
-}
-
-.grid {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.cell {
-    height: 120px;
-    margin: 1em;
-}
-
-.cell img {
-    height: 100%;
-}
-
-/****************************** FOOTER *******************************/
-
-footer {
-    background:gray;
-    color: white;
-    text-align: center;
-    padding: 1em;
-}
-
-footer p {
-
+    font-family: 'Roboto Mono', monospace;
+    font-size: 10rem;
 }
