--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,6 +1,6 @@
 * {
     --btn-bg-color: rgb(241, 241, 241);
-    --btn-hover-bg-color: #ddd;
+    --btn-hover-bg-color: rgb(233, 233, 233);
     --btn-pressed-bg-color: #bbb;
     --btn-border-color: gray;
 }
@@ -10,7 +10,7 @@
     border: none;
     border-radius: 0.3rem;
     background: var(--btn-bg-color);
-    box-shadow: 0px 4px 10px #00000030;
+    box-shadow: 0px 4px 10px #00000048;
     outline: none;
     cursor: pointer;
     font-family: 'Roboto Mono', monospace;
