--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,14 @@ header img {
 }
 
 #previous, #next {
-    min-width: 10vw;
+    max-width: 10vw;
+}
+
+@media only screen and (max-width: 700px) {
+    /* Mobile version */
+    #previous, #next {
+        display: none;
+    }
 }
 
 main {
