--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,13 @@ header img {
 }
 
 #previous, #next {
-    max-width: 10vw;
+    /* width: 15vw; */
+    white-space: nowrap;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     /* Mobile version */
-    #previous, #next {
+    #previous > label, #next > label {
         display: none;
     }
 }
