--- a/css/post.css
+++ b/css/post.css
@@ -1,7 +1,3 @@
-* {
-
-}
-
 #post {
     flex-direction: column;
     font-family: 'Open Sans', "Times New Roman", Times, sans-serif;
@@ -16,7 +12,6 @@
     #post {
         width: 90vw;
     }
-
 }
 
 #post-title {
@@ -36,7 +31,7 @@
     font-size: 1.25em;
     letter-spacing: 1pt;
     line-height: 1.6em;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
     cursor: text;
     text-align: left;
 }
@@ -45,4 +40,11 @@
     max-width: 80%;
     max-height: 70vh;
     margin: 1.5em 0;
+}
+
+code {
+    background: black;
+    color: white;
+    padding: 0.5em;
+    border-radius: 5px;
 }
