--- a/css/buttons.css
+++ b/css/buttons.css
@@ -8,7 +8,7 @@
 .btn {
     /* border: 1px solid var(--btn-border-color); */
     border: none;
-    border-radius: 0.3rem;
+    border-radius: var(--border-radius);
     background: var(--btn-bg-color);
     box-shadow: 0px 4px 10px #00000048;
     outline: none;
