--- a/css/post.css
+++ b/css/post.css
@@ -22,29 +22,49 @@
     font-family: 'Roboto Mono', monospace;
 }
 
-#post-content {
-    flex-direction: column;
+#post-links {
+    margin-top: 0.5em;
 }
 
-#post-content > p {
+#post-links img {
+    height: 1em;
+    filter: invert(1);
+}
+
+#post-content {
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#post-content > h2 {
+    margin-top: 1em;
+}
+
+#post-content > p, #post-content > ul{
     width: 100%;
     font-size: 1.25em;
     letter-spacing: 1pt;
     line-height: 1.6em;
-    margin: 0.5rem 0;
+    margin: 0.5em 0;
     cursor: text;
     text-align: left;
+}
+
+#post-content > ul {
+    list-style-position: inside;
 }
 
 #post-content > img {
     max-width: 80%;
     max-height: 70vh;
     margin: 1.5em 0;
+    align-self: center;
+    border-radius: var(--border-radius);
 }
 
 code {
     background: black;
-    color: white;
-    padding: 0.5em;
+    color: white !important;
+    padding: 0.4em;
     border-radius: 5px;
 }
