--- a/css/buttons.css
+++ b/css/buttons.css
@@ -13,7 +13,7 @@
     box-shadow: 0px 4px 10px #00000048;
     outline: none;
     cursor: pointer;
-    font-family: 'Roboto Mono', monospace;
+    font-family: var(--font-main);
     font-size: 1.2rem;
     padding: 0.5rem;
 }
