--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,10 @@ nav {
     #previous > label, #next > label {
         display: none;
     }
+
+    #content-list {
+        display: none;
+    }
 }
 
 main {
