--- a/css/post.css
+++ b/css/post.css
@@ -7,6 +7,7 @@
 }
 
 @media only screen and (max-width: 600px) {
+
     /* Mobile version */
     #post {
         width: 90vw;
@@ -35,11 +36,12 @@
     align-items: flex-start;
 }
 
-#post-content > h2 {
+#post-content>h2 {
     margin-top: 1em;
 }
 
-#post-content > p, #post-content > ul{
+#post-content>p,
+#post-content>ul {
     width: 100%;
     font-size: 1.25em;
     letter-spacing: 1pt;
@@ -49,16 +51,22 @@
     text-align: left;
 }
 
-#post-content > ul {
+#post-content>ul {
     list-style-position: inside;
 }
 
-#post-content > img {
+#post-content>img {
     max-width: 80%;
     max-height: 70vh;
     margin: 1.5em 0;
     align-self: center;
     border-radius: var(--border-radius);
+}
+
+.image-row {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 code {
