--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
     grid-template-rows: 15vh auto 20vh;
     grid-template-columns: auto;
     grid-row-gap: 2rem;
-    grid-template-areas: 
+    grid-template-areas:
         "header"
         "main"
         "footer";
@@ -31,7 +31,7 @@ body {
     /* display: none; */
 }
 
-.container { 
+.container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,7 +51,7 @@ header {
     z-index: 2;
 }
 
-a > * {
+a>* {
     text-decoration: underline;
 }
 
@@ -74,12 +74,12 @@ a:link {
     display: inline-block;
 }
 
-#content-list > li {
+#content-list>li {
     cursor: pointer;
     line-height: 2rem;
 }
 
-#content-list > li:hover {
+#content-list>li:hover {
     padding-left: 1vw;
 }
 
@@ -94,7 +94,7 @@ a:link {
 #previous {
     top: 1rem;
     left: 1rem;
-} 
+}
 
 #next {
     top: 1rem;
@@ -102,8 +102,10 @@ a:link {
 }
 
 @media only screen and (max-width: 900px) {
+
     /* Mobile version */
-    #previous > label, #next > label {
+    #previous>label,
+    #next>label {
         display: none;
     }
 
@@ -128,7 +130,7 @@ main {
 footer {
     font-family: var(--font-main);
     padding: 1rem;
-    background-color:#242729;
+    background-color: #242729;
     box-shadow: 0 -5px 10px var(--color-box-shadow);
     grid-area: footer;
 }
@@ -138,7 +140,7 @@ footer {
     justify-content: center;
 }
 
-#contacts > a > img {
+#contacts>a>img {
     margin: 1rem;
     width: 5vh;
     height: 5vh;
@@ -147,4 +149,24 @@ footer {
 #copy {
     text-align: center;
     color: #ffffff;
+}
+
+.indicators {
+    display: flex;
+    align-items: center;
+    margin: 0 1rem;
+}
+
+.indicators .indicator {
+    width: 0.5rem;
+    height: 0.5rem;
+    margin: 0 0.25rem;
+    border-radius: 50%;
+    background-color: #000000;
+    box-shadow: 0 0 10px var(--color-box-shadow);
+}
+
+.indicators .active {
+    width: 1rem;
+    height: 1rem;
 }
