--- a/css/main.css
+++ b/css/main.css
@@ -151,22 +151,17 @@ footer {
     color: #ffffff;
 }
 
-.indicators {
+image-carousel {
+    width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    margin: 0 1rem;
 }
 
-.indicators .indicator {
-    width: 0.5rem;
-    height: 0.5rem;
-    margin: 0 0.25rem;
-    border-radius: 50%;
-    background-color: #000000;
-    box-shadow: 0 0 10px var(--color-box-shadow);
+.hidden {
+    display: none;
 }
 
-.indicators .active {
-    width: 1rem;
-    height: 1rem;
+.visible {
+    display: block;
 }
