--- a/data/components/project-post.css
+++ b/data/components/project-post.css
@@ -6,6 +6,13 @@
     width: 60vw;
 }
 
+img.circle {
+    object-fit: cover;
+    border-radius: 50% !important;
+    height: min(30vh, 30vw);
+    width: min(30vh, 30vw);
+}
+
 #post>img, #post-content>img {
     max-width: 80%;
     max-height: 50vh;
