--- a/css/post.css
+++ b/css/post.css
@@ -41,7 +41,8 @@
 }
 
 #post-content>p,
-#post-content>ul {
+#post-languages, 
+#post-tech {
     width: 100%;
     font-size: 1.25em;
     letter-spacing: 1pt;
@@ -51,8 +52,16 @@
     text-align: left;
 }
 
-#post-content>ul {
+#post-languages, 
+#post-tech {
     list-style-position: inside;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#post-languages>li, 
+#post-tech>li {
+    padding: 2px;
 }
 
 #post-content>img {
@@ -61,6 +70,17 @@
     margin: 1.5em 0;
     align-self: center;
     border-radius: var(--border-radius);
+}
+
+#post-footer {
+    align-self: stretch;
+}
+
+#langs-and-frameworks {
+    margin-top: 0.5em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
 }
 
 code {
