--- a/data/components/project-post.css
+++ b/data/components/project-post.css
@@ -6,11 +6,27 @@
     width: 60vw;
 }
 
-@media only screen and (max-width: 600px) {
+#post>img, #post-content>img {
+    max-width: 80%;
+    max-height: 50vh;
+    width: auto;
+    margin: 1.5em 0;
+    align-self: center;
+    border-radius: var(--border-radius);
+}
 
-    /* Mobile version */
+/* #post>img {
+    height: 33vw;
+} */
+
+/* Mobile version */
+@media only screen and (max-width: 600px) {
     #post {
         width: 90vw;
+    }
+
+    #post>img {
+        max-width: 90%;
     }
 }
 
@@ -45,45 +61,40 @@
     list-style-position: inside;
 }
 
-#post-content>*,
-#post-languages, 
-#post-tech {
+#post-content>* {
     width: 100%;
-    font-size: 1.25em;
-    letter-spacing: 1pt;
-    line-height: 1.6em;
+}
+
+#post-content p {
     margin: 0.5em 0;
-    cursor: text;
     text-align: left;
 }
 
-#post-languages, 
-#post-tech {
-    list-style-position: inside;
-    display: flex;
-    flex-wrap: wrap;
+#post-content li, #post-content p  {
+    cursor: text;
+    font-size: 1.25em;
+    letter-spacing: 1pt;
+    line-height: 1.6em;
 }
 
-#post-languages>li, 
-#post-tech>li {
-    padding: 2px;
+#post-insides {
+    border-radius: var(--container-border-radius);
+    background-color: var(--container-background);
+    padding: 1em 2em 2em 2em;
+    margin-top: 0.5em;
 }
 
-#post-content>img,
-#post-thumbnail {
-    max-width: 80%;
-    max-height: 70vh;
-    margin: 1.5em 0;
-    align-self: center;
-    border-radius: var(--border-radius);
+#post-insides * {
+    filter: invert(100%);
 }
 
-#post-footer {
-    align-self: stretch;
+#post-insides>h2 {
+    margin-bottom: 1em;
+    text-align: center;
 }
 
-#post-footer ul {
-    list-style-type: none;
+#post-insides h3 {
+    margin-bottom: 0.5em;
 }
 
 #langs-and-frameworks {
@@ -93,9 +104,16 @@
     gap: 1em;
 }
 
-code {
-    background: black;
-    color: white !important;
-    padding: 0.4em;
-    border-radius: 5px;
+#langs-and-frameworks ul{
+    list-style-type: none;
+}
+
+.list-with-tags {
+    list-style-position: inside;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.list-with-tags>li {
+    padding: 2px;
 }
