--- a/css/buttons.css
+++ b/css/buttons.css
@@ -17,10 +17,12 @@
     font-size: 1.2rem;
     padding: 0.5rem;
     white-space: nowrap;
+    text-decoration: none;
 }
 
 .btn * {
     cursor: pointer;
+    text-decoration: none;
 }
 
 .btn:hover {
