--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,14 @@ a:link {
     right: 1rem;
 }
 
+#animation-toggle {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+}
+
 @media only screen and (max-width: 900px) {
 
     /* Mobile version */
