--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
     border: 1px solid red;
 }
 
-body {
+#page-content {
     display: grid;
     grid-template-rows: 15vh auto 20vh;
     grid-template-columns: auto;
@@ -108,12 +108,32 @@ a:link {
     right: 1rem;
 }
 
-#animation-toggle {
+#settings-button {
     width: 50px;
     height: 50px;
     position: fixed;
     bottom: 1rem;
     left: 1rem;
+}
+
+#settings {
+    padding: 1rem;
+    top: 50%;
+    left: 50%;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+}
+
+#close-settings {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+}
+
+#settings::backdrop {
+    background-color: black;
+    opacity: 0.5;
 }
 
 @media only screen and (max-width: 900px) {
