--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@
 #background {
     position: fixed;
     z-index: -999;
-    /* display: none; */
 }
 
 .container {
@@ -221,8 +220,9 @@ image-carousel {
 }
 
 code {
+    font-family: var(--secondary-font);
     background: black;
     color: white !important;
-    padding: 0.4em;
+    padding: 0.1em 0.4em;
     border-radius: 5px;
 }
