--- a/data/components/collapsible-section.css
+++ b/data/components/collapsible-section.css
@@ -1,7 +1,7 @@
 #collapser {
     display: flex;
     gap: 0.5rem;
-    margin-left: -2rem;
+    align-items: center;
     background: none;
     outline: none;
     border: none;
@@ -10,19 +10,13 @@
 
 #collapser::before {
     font-family: var(--secondary-font) !important;
-    font-size: 2rem;
-}
-
-#collapser::before {
-    content: "\02C5";
+    font-size: 3rem;
+    line-height: 2rem;
+    content: "\02EF";
 }
 
 :host([collapsed]) > #collapser::before {
-    content: "\02C4";
-}
-
-#collapser:hover {
-    margin-left: -1rem;
+    content: "\02F0";
 }
 
 #collapsible-content  {
