--- a/data/components/project-post.css
+++ b/data/components/project-post.css
@@ -22,19 +22,8 @@ img.circle {
     border-radius: var(--border-radius);
 }
 
-/* Mobile version */
-@media only screen and (max-width: 600px) {
-    #post {
-        width: 90vw;
-    }
-
-    #post>img {
-        max-width: 90%;
-    }
-}
-
 #post-title {
-    font-size: 3em;
+    font-size: 2.5rem;
 }
 
 #post-date, #occupation{
@@ -55,13 +44,11 @@ img.circle {
     align-items: flex-start;
 }
 
-#post-content>h2 {
-    margin-top: 1em;
-}
-
-#post-content>ul,
-#post-content>ol {
-    list-style-position: inside;
+#post-content ul,
+#post-content ol {
+    padding-left: 1rem;
+    margin-left: 0.5rem;
+    margin-top: 0.25rem;
 }
 
 #post-content>* {
@@ -69,8 +56,7 @@ img.circle {
 }
 
 #post-content p {
-    margin: 0.5em 0;
-    text-align: left;
+    margin-top: 1rem;
 }
 
 #post-content li, #post-content p  {
@@ -78,6 +64,10 @@ img.circle {
     font-size: 1.25em;
     letter-spacing: 1pt;
     line-height: 1.6em;
+}
+
+#post-content li::marker {
+    margin: 0;
 }
 
 #post-insides {
@@ -119,4 +109,15 @@ img.circle {
 
 .list-with-tags>li {
     padding: 2px;
+}
+
+/* Mobile version */
+@media only screen and (max-width: 600px) {
+    #post {
+        width: 90vw;
+    }
+
+    #post>img {
+        max-width: 90%;
+    }
 }
