--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,8 @@ a:link {
     padding-left: 1rem;
     padding-top: 1rem;
     font-size: 1.2rem;
-    display: inline-block;
+    border: none;
+    background: none;
 }
 
 #content-list * {
@@ -128,6 +129,16 @@ a:link {
     position: fixed;
     bottom: 1rem;
     left: 1rem;
+}
+
+#content-list-button {
+    display: none;
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    font-size: 1.75rem;
+    width: 50px;
+    height: 50px;
 }
 
 dialog {
@@ -205,7 +216,7 @@ image-carousel {
 }
 
 .visible {
-    display: block;
+    display: block !important;
 }
 
 .disabled {
@@ -227,12 +238,16 @@ code {
         font-size: 14px;
     }
 
-    #previous>label,
-    #next>label {
+    #previous>span,
+    #next>span {
         display: none;
     }
 
-    #content-list {
-        display: none;
+    #content-list::backdrop {
+        background: #fff;
+    }
+
+    #content-list-button {
+        display: block;
     }
 }
