--- a/css/buttons.css
+++ b/css/buttons.css
@@ -32,3 +32,10 @@
 .btn:active {
     background: var(--btn-hover-bg-color);
 }
+
+.fixed-icon-button {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+}
