--- a/css/main.css
+++ b/css/main.css
@@ -80,11 +80,13 @@ a:link {
 #content-list {
     top: 15vh;
     list-style-type: none;
-    padding-left: 1rem;
-    padding-top: 1rem;
+    padding: 1rem;
     font-size: 1.2rem;
-    border: none;
-    background: none;
+    border-radius: var(--border-radius);
+}
+
+#content-list::backdrop {
+    backdrop-filter: blur(10px);
 }
 
 #content-list * {
@@ -95,14 +97,19 @@ a:link {
     cursor: pointer;
     line-height: 2rem;
     text-decoration: none;
+    display: flex;
+    gap: 0.5rem;
 }
 
 #content-list a {
     text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 #content-list>li:hover {
-    padding-left: 1vw;
+    padding-left: 0.5rem;
 }
 
 .selected-nav {
@@ -124,21 +131,15 @@ a:link {
 }
 
 #settings-button {
-    width: 50px;
-    height: 50px;
-    position: fixed;
     bottom: 1rem;
     left: 1rem;
 }
 
 #content-list-button {
     display: none;
-    position: fixed;
     top: 1rem;
     left: 1rem;
     font-size: 1.75rem;
-    width: 50px;
-    height: 50px;
 }
 
 dialog {
@@ -166,8 +167,7 @@ dialog h1 {
 }
 
 #settings::backdrop {
-    background-color: black;
-    opacity: 0.5;
+    backdrop-filter: blur(5px);
 }
 
 main {
@@ -237,14 +237,13 @@ code {
     html {
         font-size: 14px;
     }
-
-    #previous>span,
-    #next>span {
+    
+    #previous, #next {
         display: none;
     }
 
-    #content-list::backdrop {
-        background: #fff;
+    #content-list {
+        border: 1px solid black;
     }
 
     #content-list-button {
