--- a/css/buttons.css
+++ b/css/buttons.css
@@ -33,9 +33,51 @@
     background: var(--btn-hover-bg-color);
 }
 
-.fixed-icon-button {
-    position: fixed;
+.icon-button {
     width: 50px;
     height: 50px;
     z-index: 2;
+}
+
+#previous {
+    top: 1rem;
+    left: 1rem;
+}
+
+#next {
+    top: 1rem;
+    right: 1rem;
+}
+
+#settings-button {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+#content-list-button {
+    position: absolute;
+    display: none;
+    top: 1rem;
+    left: 1rem;
+    font-size: 1.75rem;
+}
+
+#up-button {
+    position: fixed;
+    display: none;
+    bottom: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+}
+
+/* Mobile version */
+@media only screen and (max-width: 900px) {
+    #previous, #next {
+        display: none;
+    }
+
+    #content-list-button {
+        display: block;
+    }
 }
