--- a/data/components/image-carousel.css
+++ b/data/components/image-carousel.css
@@ -26,3 +26,10 @@ img {
     width: 1rem;
     height: 1rem;
 }
+
+:host {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
