--- a/data/components/project-post.css
+++ b/data/components/project-post.css
@@ -20,9 +20,16 @@
     }
 }
 
-#post>img, #post-content>img {
+#post>img {
+    max-height: 50vh !important;
+}
+
+#post>img, #post-content>img, #post-content>video {
     max-width: 80%;
-    max-height: 50vh;
+}
+
+#post>img, #post-content img, #post-content video {
+    max-height: 60vh;
     width: auto;
     margin: 1.5em 0;
     align-self: center;
